assets/scss/_single.scss
#single-container{
    width: 100%;
    display: flex;
    flex-direction: column;
}

#single-container img {
    width: 50vw;
}

.right-img {
    float: right;
}

.left-img {
    float: left;
}

.single-title{
    font-size: 7rem;
    justify-self: center;
    text-align: center;
    width: 100%;
    margin-bottom: 0;
}

.single-meta {
    justify-content: left;
    width: 100%;
    text-align: left; 
    display: grid;
    grid-template-rows: .25fr .25fr;
    margin: 0vh 7vw;
    font-size: 1.5rem;
}

.single-main {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    justify-self: center;

}

.single-categories {
    font-size: .9em;
    justify-self: center;
    width: 100%;
    text-align: left;
    display: flex;
    margin: 0vh 7vw;
}

.single-categories p{
    justify-self: flex-start;
    margin-right: 1em;
}

.single-tags {
    font-size: .9em;
    justify-self: center;
    width: 100%;
    text-align: left;
    display: flex;
    margin: 0vh 7vw;
}

.single-tags p{
    justify-self: flex-start;
    margin-right: 1em;
}

.single-content {
    padding: 5%;
}

.single-other{
    justify-self: center;
    display: grid;
    grid-template-rows: 1fr 1fr;
    padding: 5%;
}

.single-other-opts {
    display: grid;
    grid-template-columns: 1fr 1fr;
}


.single-disqus{
    padding: 5%;
    justify-self: center;
}

@media (max-width: 640px) {

    #single-container img {
        width: 90vw;
        display: block;
        margin-left: auto;
        margin-right: auto;
    }
    
    .right-img {
        float: none;
    }
    
    .left-img {
        float: none;
    }

    .single-title{
        font-size: 12vw;
        margin: 4vh 0vw 0vh 0vw;
    }

    .single-meta {
        font-size: .75rem;
    }


}

